# lumen-protocol

./: .gitignore  DICTIONARY.md  HERMES_DEEP_LUMEN.md  HERMES_INTEGRATION.md  INSTALL.md  INSTALL_ES.md  LICENSE  PAPER.md  PAPER_ES.md  README.md  README_ES.md  README_EXT.md  README_EXT_ES.md  RFC_LUMEN.md  RFC_LUMEN_ES.md  ROADMAP.md  SOUL.md  SPEC.md  SPEC_DEV.md  SPEC_DEV_ES.md
.github/workflows/: ci.yml
bench/: bench_ffi.py
bench-results/: V4_REPORT.md
docs/: BENCHMARKS.md  COGNITIVE_OS.md  ROADMAP_MLIGHT.md  doc-map-2026-06-20.md  enterprise-stress-testing-2026-06-20.md  lumen-universal-protocol-strategy.md  lumen_thinking_usage.md  pdb-first-architecture.md  token-efficient-tools-2026-06-20.md
examples/: README.md
examples/agent-loop/: README.md  agent_loop.py
examples/cost-calculator/: README.md  cost_calculator.py
examples/mcp-dropin/: README.md  dropin_server.py
implementations/csharp/: Dict.cs  Hyb128.cs  LumenCompress.cs  LumenFFI.cs  Program.cs
implementations/mcp-servers/: PROPOSAL_COGNITIVE_EXOSKELETON.md  README.md  RETROSPECTIVE.md  RETROSPECTIVE_ES.md  TOOLS_GUIDE.md  demo_server.py  eval_framework.py  lumen_server.py  native_transport.py  shm_bridge_plugin.py  shm_native_server.py
implementations/php/: autoload_manual.php  bench.php  bench_err.txt  bench_out.json  bench_results.json  bench_stderr.txt  composer.json
implementations/python/: README.md  README_ES.md  WINDOWS_FIXES.md  bench.py  bench_results.json  bench_results_v2.json  bench_stderr.txt  compare_bench.py  compare_v2.py  pyproject.toml
implementations/python/src/lumen/: __init__.py  cadencia.py  compress.py  dict.py  frame.py  frame_assembler.py  hyb128.py  negotiation.py  shm.py  transport.py
implementations/python/src/lumen_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
implementations/python/tests/: __init__.py  test_lumen.py
implementations/rust/: Cargo.toml  lumen.h
implementations/rust/fuzz/: Cargo.toml
implementations/rust/fuzz/fuzz_targets/: compress_roundtrip.rs  frame_parse.rs  hyb128_roundtrip.rs
implementations/rust/src/: compress.rs  crypto.rs  datagram.rs  dict.rs  ffi.rs  fixtures.rs  frame.rs  handshake.rs  hyb128.rs  lib.rs  macaroon.rs  mux.rs  quic.rs  shm.rs  stream.rs  transport.rs  wasm.rs
implementations/rust/tests/: e2e_test.rs  fuzz_tests.rs  shm_transport.rs
implementations/typescript/: .npmignore  README.md  README_ES.md  bench_ffi.ts  bench_results.json  bench_results_expanded.json  bench_results_full.json  bench_stderr.txt  bench_stderr2.txt  bench_stderr3.txt  lumen-protocol-mcp-transport-0.1.0.tgz  package-lock.json  package.json  tsconfig.json
revision_200626_lumen-protocol/: ALL_MD_FILES.json  INVESTIGATION.md
revision_20260622/: LUMEN-AGENT-EXPERIENCE-PART2.md  LUMEN-AGENT-EXPERIENCE-PART3.md  LUMEN-AGENT-EXPERIENCE-PART5.md  LUMEN-AGENT-EXPERIENCE.md
revision_20260623/: como-me-siento-usando-lumen.md  introspeccion-lumen-part2.md
revision_210626/: LUMEN-ENTERPRISE-TEST-SUITE.md  LUMEN-EXPERIENCE-REPORT.md  LUMEN-META-DEBUG.md  PYME-DEEP-DEMO.md  WERFEN-SYSTELABS-ENTERPRISE.md
revisions/: acta_revision_1_2026-06-20.md  audit_SHMBridge_timeout2026-06-28.md
revisions/200626_lumen-protocol/: INITIAL_MAP.md  RESUMEN_EJECUTIVO.md
revisions/20260622/: LUMEN-AGENT-MISSING.md  LUMEN-AGENT-RETROSPECTIVE.md
revisions/210626/: LUMEN-EXPERIENCE-REPORT-PRO.md  README.md
scripts/audits/: VULNERABILITIES.md  review_opus68.md
scripts/cognitive-tools/: add_checklist.py  add_feeling_panel.sh  add_state_feeling.py  apply_clean.py  apply_cog_pulse.py  apply_pattern_suggest.py  apply_session_end.py  apply_state_feeling.py
scripts/pdb-migration/: pdb_apply.py  pdb_clean.py  pdb_first_migration.py  pdb_restore.py
scripts/plans/: plan-mcp.md  plan-mejoras-2.md  plan-mejoras.md
skills/: README.md
skills/kanban-cognitive/: SKILL.md
skills/lumen-agent-loop/: SKILL.md
skills/lumen-cognitive-safety/: SKILL.md
skills/lumen-cognitive-state-sync/: SKILL.md
skills/lumen-cognitive-workflows/: SKILL.md
skills/lumen-control/: SKILL.md
skills/lumen-daily-workflows/: SKILL.md
skills/lumen-dashboard-pattern/: SKILL.md
skills/lumen-enterprise-pattern/: SKILL.md
skills/lumen-kickstart/: SKILL.md
skills/lumen-mcp-server/: SKILL.md
skills/lumen-mcp-server-pattern/: SKILL.md
skills/lumen-pro-tools/: SKILL.md
skills/lumen-server-development/: SKILL.md
skills/lumen-thinking-hermes-integration/: SKILL.md
skills/lumen-thinking-server-dev/: SKILL.md
skills/pdb-kv/: SKILL.md
(+366 files in other folders)
