[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen-mcp"
version = "0.1.0"
description = "LUMEN binary protocol transport for MCP (Model Context Protocol)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Gonzalo Monzón", email = "gonzalo@cadenceslab.com" },
]
keywords = ["mcp", "model-context-protocol", "binary-protocol", "lumen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
websocket = ["websockets>=12.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
