[package]
name = "lumen"
version = "0.1.0"
edition = "2021"
description = "LUMEN: Lightweight Universal Model Exchange Network - A high-efficiency binary protocol for MCP communication"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "shootout"
path = "src/bin/shootout.rs"
