[package]
name = "lumen"
version = "0.1.0"
edition = "2021"
description = "LUMEN: Lightweight Universal Model Exchange Network - A high-efficiency binary protocol for MCP communication"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[[bin]]
name = "shootout"
path = "src/bin/shootout.rs"

[[bin]]
name = "heap-shootout"
path = "src/bin/heap-shootout.rs"

[[bin]]
name = "concurrent-shootout"
path = "src/bin/concurrent-shootout.rs"

[[bin]]
name = "ipc-shootout"
path = "src/bin/ipc-shootout.rs"

[[bin]]
name = "cadencia-bridge"
path = "src/bin/cadencia-bridge.rs"

[[bin]]
name = "workspace-shootout"
path = "src/bin/workspace-shootout.rs"
