[package]
name = "lumen"
version = "0.1.0"
edition = "2021"
description = "LUMEN: Lightweight Universal Model Exchange Network - A high-efficiency binary protocol for MCP communication"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
wasm-bindgen = { version = "0.2", optional = true }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Optional: QUIC transport (RFC 9000)
quinn = { version = "0.11", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "net", "sync", "macros"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
wasm = ["wasm-bindgen"]
quic = ["quinn", "tokio", "rustls", "rcgen"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "shootout"
path = "src/bin/shootout.rs"

[[bin]]
name = "heap-shootout"
path = "src/bin/heap-shootout.rs"

[[bin]]
name = "concurrent-shootout"
path = "src/bin/concurrent-shootout.rs"

[[bin]]
name = "ipc-shootout"
path = "src/bin/ipc-shootout.rs"

[[bin]]
name = "cadencia-bridge"
path = "src/bin/cadencia-bridge.rs"

[[bin]]
name = "workspace-shootout"
path = "src/bin/workspace-shootout.rs"

[[bin]]
name = "shm-shootout"
path = "src/bin/shm-shootout.rs"
